fixed prices not aligning right

--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,12 @@ h2 {
   font-family: Impact, serif;
 }
 
+.item {
+  display: flex;
+}
+
 .item p {
-  display: inline-block;
+  display: inline;
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 18px;
